trunk/Archive2/bd/3cc85855c80cb5/output
main.cpp: In function 'int main()':
main.cpp:13:18: error: expected ';' before 'in'
     for(auto&& i in v)
                  ^
main.cpp:13:18: error: 'in' was not declared in this scope
main.cpp:13:21: error: expected ';' before 'v'
     for(auto&& i in v)
                     ^
main.cpp:13:21: warning: for increment expression has no effect [-Wunused-value]
main.cpp:15:17: error: use of 'i' before deduction of 'auto'
         cout << i << endl;
                 ^
main.cpp:10:11: warning: unused variable 'i2_' [-Wunused-variable]
     auto& i2_ = i_;
           ^
main.cpp:11:12: warning: unused variable 'i3_' [-Wunused-variable]
     auto&& i3_ = 42;
            ^
